# hydro-param

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/: launch.json  settings.json
.claude/hooks/: block-lock-edits.sh  mypy-check.sh  pytest-related.sh  ruff-format.sh
.claude/skills/issue-branch/: SKILL.md
.claude/skills/pixi-lock-sync/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_decision.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
configs/: datasets.yml  delaware_terrain.yml  delaware_terrain_sandbox.yml
configs/datasets/: climate.yml  geology.yml  hydrography.yml  land_cover.yml  snow.yml  soils.yml  topography.yml
configs/examples/: drb_2yr_pipeline.yml  drb_2yr_pywatershed.yml  gfv11_static_pipeline.yml  gfv11_static_pywatershed.yml
data/pywatershed_gis/drb_2yr/: nhru.gpkg  nsegment.gpkg  parameters_PRMSChannel.nc  parameters_dis_both.nc  parameters_dis_seg.nc  waterbodies.gpkg
data/pywatershed_gis/fgr_2yr/: nhru.gpkg  nsegment.gpkg  parameters_PRMSChannel.nc  parameters_dis_both.nc  parameters_dis_seg.nc
docs/: CLAUDE.md  ai-workflow-guide.md  contributing.md  design.md  index.md  pipeline_flowchart.md
docs/api/: batching.md  cli.md  config.md  data-access.md  derivations-pywatershed.md  formatters-pywatershed.md  index.md  manifest.md  pipeline.md  plugins.md  processing.md  project.md  pywatershed-config.md  registry.md  sir.md  solar.md  units.md
docs/getting-started/: index.md  installation.md  project-init.md  quickstart.md
docs/models/pywatershed/: hydroparam_dataset_parameter_map.jsx
docs/plans/: 2026-02-23-pipeline-memory-optimization-design.md  2026-02-23-pipeline-memory-optimization-plan.md  2026-02-23-sir-normalization-design.md  2026-02-23-sir-normalization-plan.md  2026-02-24-pipeline-resilience-optimization-plan.md  2026-02-24-sir-temporal-normalization-design.md  2026-02-24-sir-temporal-normalization-plan.md  2026-02-25-derivation-steps-5-9-14-design.md  2026-02-25-derivation-steps-5-9-14-plan.md  2026-02-25-forcing-generation-design.md  2026-02-25-forcing-generation-plan.md  2026-02-25-pet-transpiration-design.md  2026-02-25-pet-transpiration-plan.md  2026-02-25-pywatershed-plugin-architecture-design.md  2026-02-25-pywatershed-plugin-architecture-impl.md  2026-02-26-step12-routing-design.md  2026-02-26-step12-routing-plan.md  2026-02-26-waterbody-overlay-design.md  2026-02-26-waterbody-overlay-plan.md  2026-02-27-bundle-registry-in-package-design.md  2026-02-27-bundle-registry-in-package.md  2026-02-27-pipeline-template-comprehensive-design.md  2026-02-27-pipeline-template-comprehensive.md  2026-02-27-pre-release-ux-audit-design.md  2026-02-27-pre-release-ux-audit-plan.md  2026-02-28-config-schema-audit-design.md  2026-02-28-config-schema-audit-plan.md  2026-02-28-decouple-pywatershed-design.md  2026-02-28-decouple-pywatershed-plan.md  2026-02-28-sir-dataset-prefix-design.md  2026-02-28-sir-dataset-prefix-plan.md  2026-02-28-sir-variable-naming-fix.md  2026-02-28-temporal-derivation-context-design.md  2026-02-28-temporal-derivation-context-plan.md  2026-02-28-temporal-forcing-regrouping-design.md  2026-02-28-temporal-forcing-regrouping-plan.md  2026-03-01-pywatershed-config-redesign-design.md  2026-03-01-pywatershed-config-redesign-plan.md  2026-03-01-stale-code-cleanup-design.md  2026-03-01-stale-code-cleanup-plan.md  (+34 more)
docs/reference/: gfv11_raster_provenance.md  parameter_inventory.md  pipeline-flow.md  pywatershed_dataset_param_map.yml  pywatershed_parameterization_guide.md
docs/user-guide/: cli.md  configuration.md  datasets.md  index.md  pywatershed-workflow.md
notebooks/: compare_parameters.ipynb  qaqc_output_plots.ipynb  run_pywatershed.ipynb  segment_nhd_overlay.ipynb  spatial_batching.ipynb  temporal_missing_features.ipynb  test_gnatsgo.ipynb
pw-check/: .gitignore  .hydro-param
pw-check/configs/: gfv11_static_pipeline.yml  gfv11_static_pywatershed.yml  pipeline.yml  pywatershed_run.yml
pw-check/data/fabrics/: nsegment.gpkg
scripts/: download_delaware_nhd.py  fetch_drb_waterbodies.py  inspect_gnatsgo_stac.py  plot_terrain_results.py
src/hydro_param/: __init__.py  __main__.py  batching.py  classification.py  cli.py  config.py  data_access.py  dataset_registry.py  gfv11.py  manifest.py  output.py  pipeline.py  plugins.py  processing.py  project.py  pywatershed_config.py  sir.py  sir_accessor.py  solar.py  units.py
src/hydro_param/data/datasets/: climate.yml  land_cover.yml  snow.yml  soils.yml  topography.yml  water_bodies.yml
src/hydro_param/data/lookup_tables/: calibration_seeds.yml  cov_type_winter_reduction.yml  nlcd_to_prms_cov_type.yml
src/hydro_param/data/pywatershed/: parameter_metadata.yml
src/hydro_param/data/pywatershed/lookup_tables/: cov_type_to_interception.yml  forcing_variables.yml  sdc_table.yml  soil_texture_to_prms_type.yml
src/hydro_param/derivations/: __init__.py  pywatershed.py
src/hydro_param/formatters/: __init__.py  pywatershed.py
tests/: test_batching.py  test_classification.py  test_cli.py  test_config.py  test_data_access.py  test_dataset_registry.py  test_gfv11.py  test_local_tiff.py  test_manifest.py  test_output.py  test_pipeline.py  test_pipeline_derivation.py  test_plugins.py  test_project.py  test_pywatershed_config.py  test_pywatershed_derivation.py  test_pywatershed_formatter.py  test_registry.py  test_sir.py  test_sir_accessor.py  test_smoke.py  test_solar.py  test_terrain.py  test_units.py
