[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydro-param"
version = "0.1.0dev0"
description = "Configuration-driven hydrologic parameterization for any model, any fabric."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rich McDonald", email = "rich@connectedwatersllc.com" },
]
keywords = [
    "hydrology",
    "parameterization",
    "geospatial",
    "NHM",
    "NextGen",
    "watershed",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "xarray",
    "geopandas",
    "numpy",
    "pyyaml",
    "pydantic>=2.0",
    "cyclopts",
    "gdptools>=0.3.8",
]

[project.scripts]
hydro-param = "hydro_param.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/rmcd-mscb/hydro-param"
Documentation = "https://rmcd-mscb.github.io/hydro-param/"
Repository = "https://github.com/rmcd-mscb/hydro-param"
Issues = "https://github.com/rmcd-mscb/hydro-param/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hydro_param"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "xarray.*",
    "numpy.*",
    "pandas.*",
    "pynhd.*",
    "gdptools.*",
    "pystac_client.*",
    "planetary_computer.*",
    "rioxarray.*",
    "exactextract.*",
    "cyclopts.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Pixi workspace configuration
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
hydro-param = { path = ".", editable = true }

# Conda-forge overrides for packages with C/Fortran dependencies.
# These replace the PyPI versions from [project.dependencies].
[tool.pixi.dependencies]
geopandas = ">=1.0"
xarray = ">=2024.1"
numpy = ">=1.26"
exactextract = ">=0.2"
pyarrow = ">=14.0"
urllib3 = ">=2.6"
distributed = ">=2024.1"

# --- Features ---------------------------------------------------------------

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
pre-commit = "*"

[tool.pixi.feature.dev.tasks]
test = "pytest tests/ --cov=src/hydro_param --cov-report=term-missing"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
typecheck = "mypy src/"
pre-commit = "pre-commit run --all-files"
check = { depends-on = ["lint", "format-check", "typecheck", "test"] }

[tool.pixi.feature.docs.dependencies]
ruff = "*"

[tool.pixi.feature.docs.pypi-dependencies]
mkdocs-material = ">=9.5"
mkdocstrings = { version = ">=0.27", extras = ["python"] }

[tool.pixi.feature.docs.tasks]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

# --- Environments ------------------------------------------------------------
[tool.pixi.environments]
default = { features = ["py311"], solve-group = "default" }
dev = { features = ["dev", "py311"], solve-group = "default" }
docs = { features = ["docs", "py311"], solve-group = "default" }
